[package]
name = "futari-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }

# HTTP framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }

# TCP socket handling
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.5"

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
colored = "2.0"

# Utilities
thiserror = "1.0"
anyhow = "1.0"
chrono = "0.4"

# Concurrency
dashmap = "5.5"
parking_lot = "0.12"

# 添加的新依赖
md-5 = "0.10.6"
